--- a/src/twist_service/package.xml
+++ b/src/twist_service/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>bend_service</name>
+  <name>twist_service</name>
   <version>0.0.0</version>
   <description>bend_service</description>
 
