--- a/src/twist_srv/package.xml
+++ b/src/twist_srv/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>bend_srv</name>
+  <name>twist_srv</name>
   <version>0.0.0</version>
-  <description>bend_srv</description>
+  <description>twist_srv</description>
 
   <author email="null@null.null">null null</author>
 
